# advent-of-code

./: .gitignore  Cargo.toml  README.md  dune-project  makefile  puzzle1.ml  utils.ml
2022/: utils.ml
2022/07/: puzzle.ml
2022/08/: puzzle.ml
2022/10/: puzzle.ml
2022/19/: puzzle.ml
2022/24/: puzzle.ml
2023/01/: puzzle.rs
2023/02/: puzzle.rs
2023/03/: puzzle.rs
2023/04/: puzzle.rs
2023/05/: puzzle.rs
2023/06/: puzzle.rs
2023/07/: puzzle.rs
2023/08/: puzzle.rs  puzzle.rs.bk
2023/09/: puzzle.rs
2023/10/: puzzle.rs
2023/11/: puzzle.rs
2023/12/: puzzle.rs
2023/13/: puzzle.rs
2023/14/: puzzle.rs
2023/15/: puzzle.rs
2023/16/: puzzle.rs
2023/17/: puzzle.rs
2023/18/: puzzle.rs
2023/19/: puzzle.rs
2023/20/: puzzle.rs
2023/21/: puzzle.rs
2023/22/: puzzle.rs
2023/23/: puzzle.rs
2023/24/: puzzle.rs
2023/25/: puzzle.rs
2024/: dune
2024/01/: puzzle.ml
2024/02/: puzzle.ml
2024/03/: puzzle.ml
2024/04/: puzzle.ml
2024/05/: puzzle.ml
2024/06/: puzzle.ml
2024/07/: puzzle.ml
2024/08/: puzzle.ml
2024/09/: puzzle.ml
2024/10/: puzzle.ml
2024/11/: puzzle.ml
2024/12/: puzzle.ml
2024/13/: puzzle.ml
2024/14/: puzzle.ml
2024/15/: puzzle.ml
2024/16/: puzzle.ml
2024/Day01/: puzzle.ml
2024/Day02/: puzzle.ml
2024/Day03/: puzzle.ml
2024/Day04/: puzzle.ml
2024/Day05/: puzzle.ml
2024/Day06/: puzzle.ml
2024/Day07/: puzzle.ml
2025/: dune
shared/: AOC.ml  advent_of_code.ml  bitset.ml  bitset.mli  dune  grid.ml  grid.mli  range.ml  range.mli  utils.ml  utils.mli  vec2.ml  vec2.mli
(+50 files in other folders)
