(lang dune 3.17)

(name advent_of_code)

(generate_opam_files true)

(source
 (github dlesbre/advent-of-code))

(authors "Dorian Lesbre <dorian.lesbre@gmail.com>")

(license MIT)

(package
 (name advent_of_code)
 (synopsis "Puzzle solutions for advent of code in OCaml")
 (description "A longer description")
 (depends ocaml)
 (tags ("advent of code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
